tests/e2e-test/sidecar-injector/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod
  labels:
    kyverno-envoy-sidecar/injection: enabled
spec:
  containers:
  - name: busybox
    image: busybox
    args:
    - sleep
    - 1d
